[tool.poetry]
name = "back"
version = "0.1.0"
description = ""
authors = ["likeroge <likeroge@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.3"
requests = "^2.27.1"
mongoengine = "^0.23.1"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
